2000-05-02  NotZed  <NotZed@HelixCode.com>

	* camel.h: REmove gmime-utils.h from here.

	* providers/mbox/camel-mbox-search.[ch]: Removed.  Functionally
	redundant.

	* providers/mbox/camel-mbox-folder.c (mbox_search_by_expression):
	Use the new CamelFolderSearch class to do the actual searching,
	just setup the search here.

	* camel-folder-search.[ch]: A helper class that providers may
	subclass to provide their own search functionality, or they can
	simply use as is, it supports body searches if an ibex is
	supplied, and header searches if a summary is supplied.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.
	* providers/MH/Makefile.am: same.
	* providers/maildir/Makefile.am: same.
	* providers/mbox/Makefile.am: same.
	* providers/nntp/Makefile.am: same.
	* providers/pop3/Makefile.am: same.
	* providers/sendmail/Makefile.am: same.	
	* providers/smtp/Makefile.am: same.		

2000-05-02  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-search.c
	(camel_mbox_folder_search_by_expression): Dont store/remove
	current search from the search list.
	
	* providers/mbox/camel-mbox-folder.h: Removed searches list,
	searches are all sync now.

	* gmime-utils.[ch]: What the hell, remove it.  This will break the
	nntp provider.  The mime parser can be used instead though.
	Removed from all code including it (but none were using it).

	* gmime-utils.c (_store_header_pair_from_string): Removed bizarre
	string_dichotomy version of this.  This code is somewhat redundant
	now, and is headed for death anyway.

	* gstring-util.c (g_string_dichotomy): Same with this one.
	(g_string_clone): Removed a memory leak, g_string_new() allocates
	its own memory.
	(g_string_append_g_string): Allow to append an empty gstring onto
	another gstring, dont abort()!

	* string-utils.c (string_dichotomy): Removed this incredibly weird
	function.

	* camel-folder.c (_create): Replaced the rather obtuse use of